[package]
name = "openpathresolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.11.2"
serde = { version = "1.0.219", features = ["derive", "rc"] }
minijinja = "2.12.0"
thiserror = "2.0.16"

[dev-dependencies]
proptest = "1.7.0"
rstest = "0.26.1"
tempfile = "3.21.0"
