[package]
name = "openpathresolver"
version = "0.1.0"
edition = "2024"
description = "A simple path resolution framework"
repository = "https://github.com/scott-wilson/openpathresolver"
license = "MIT OR Apache-2.0"
keywords = ["path", "pipeline", "workspace"]
include = [
  "/CHANGELOG.md",
  "/Cargo.toml",
  "/LICENSE-APACHE",
  "/LICENSE-MIT",
  "/README.md",
  "/SECURITY.md",
  "/src/**/*.rs",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.89"
glob = "0.3.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive", "rc"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["rt"] }

[dev-dependencies]
proptest = "1.9.0"
rstest = "0.26.1"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["full"] }
walkdir = "2.5.0"
