[package]
name = "pyopenpathresolver"
version = "0.1.0"
edition = "2024"
readme = "README-PYTHON.md"
repository = "https://github.com/scott-wilson/openpathresolver/"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
name = "openpathresolver"

[dependencies]
async-trait = "0.1.89"
base_openpathresolver = { package = "openpathresolver", path = "../../" }
pyo3 = { version = "0.27.2", features = ["abi3-py39"] }
pyo3-async-runtimes = { version = "0.27.0", features = [
  "attributes",
  "tokio-runtime"
] }
regex = "1.12.2"
